examples/sugars/pipe_map_wants_apply.err.expected
error: .[|]. is element-wise; .total. takes ..Int.., not .Int.
= help: did you mean .[|]>. .apply to the whole value.
pipe_map_wants_apply.kai:8:21
