examples/sugars/pipe_map_wants_apply.kai
# Negative: `|` is map (element-wise), but `total` takes the whole
# container. The typer recognises the container-vs-element shape and
# suggests `|>` instead of surfacing the desugared `list.map` mismatch.

fn total(xs: [Int]) : Int = reduce(xs, 0, (acc, x) => acc + x)

fn main() : Int {
  let r = [1, 2, 3] | total
  print(int_to_string(r))
  0
}
